--- a/index.html
+++ b/index.html
@@ -152,25 +152,25 @@
 
     <div class="main-content">
         <div class="card">
-            <img src="C:\Users\Usuário\Desktop\Cachorro1.jpg" alt="Animal 1">
+            <img src="Cachorro1.jpg" alt="Animal 1">
             <h3>Cachorro Fiel</h3>
             <p>Idade: 2 anos - Porte médio</p>
             <a href="#adote" class="btn">Adotar</a>
         </div>
         <div class="card">
-            <img src="C:\Users\Usuário\Desktop\Gato2.jpg" alt="Animal 2">
+            <img src="Gato2.jpg" alt="Animal 2">
             <h3>Gatinha Carinhosa</h3>
             <p>Idade: 1 ano - Porte pequeno</p>
             <a href="#adote" class="btn">Adotar</a>
         </div>
         <div class="card">
-            <img src="C:\Users\Usuário\Desktop\Gato3.jpg" alt="Animal 3">
+            <img src="Gato3.jpg" alt="Animal 3">
             <h3>Gato Amigo</h3>
             <p>Idade: 3 anos - Porte médio</p>
             <a href="#adote" class="btn">Adotar</a>
         </div>
         <div class="card">
-            <img src="C:\Users\Usuário\Desktop\Cachorro3.jpeg" alt="Animal 4">
+            <img src="Cachorro3.jpeg" alt="Animal 4">
             <h3>Cachorro Alegre</h3>
             <p>Idade: 4 anos - Porte grande</p>
             <a href="#adote" class="btn">Adotar</a>
